--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1798,7 +1798,7 @@
     "name_required": "Vui lòng nhập tên loại nguyên liệu",
     "description_label": "Mô tả",
     "description_placeholder": "Nhập mô tả (tuỳ chọn)",
-    "submit": "Tạo loại Nguyên Vật Liệu",
+    "submit": "Tạo Loại Nguyên Vật Liệu",
     "success": "Tạo loại thùng thành công!",
     "fail": "Tạo thất bại!",
     "error": "Lỗi kết nối đến server!",
