--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -797,7 +797,7 @@
       "empty_priority": "Vui lòng chọn mức độ ưu tiên!"
     },
     "success": {
-      "created": "Tạo yêu cầu thu hàng thành công!"
+      "created": "Lập Kế Hoạch Cung Cấp Nguyên Liệu Thành Công!"
     }
   },
   "order": {
@@ -939,7 +939,7 @@
     }
   },
   "fuelProvide": {
-    "orderApproved": "Đơn hàng đã được duyệt thành công!",
+    "orderApproved": "Đơn cung cấp đã được duyệt thành công!",
     "approveFailed": "Duyệt đơn thất bại!",
     "errorApproving": "Có lỗi xảy ra khi duyệt đơn:",
     "orderCanceled": "Đơn hàng đã bị hủy thành công!",
