fix warehouse export product

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -909,6 +909,7 @@
     "request_name": "Request Name",
     "product_quantity": "Product Quantity (Kg)",
     "material_quantity": "Material Quantity (Kg)",
+    "planCode": "Plan Code",
     "production_date": "Start Date",
     "end_date": "End Date",
     "actions": "Actions"
@@ -1069,10 +1070,17 @@
       "receipt_id": "Receipt ID",
       "manager": "Manager",
       "receiptType": "Receipt Type",
+      "productCode":"Product Code",
+      "productionPlan": "Production Plan",
+      "materialType": "Material Category",
+      "weight": "Weight",
+      "productImage": "Product Batch Image",
       "storage": "Storage",
       "status": "Status",
       "createdAt": "Created At",
       "updatedAt": "Updated At",
+      "expirationDate": "Expiration Date",
+      "curentStatus": "current Status",
       "quantity": "Quantity",
       "note": "Note",
       "action": "Action"
@@ -1366,7 +1374,7 @@
   "form": {
     "request_name": "Request Name",
     "request_type": "Request Type",
-    "material": "Material",
+    "material": "Material Type",
     "product_quantity": "Product Quantity(Kg)",
     "material_quantity": "Material Quantity(Kg)",
     "production_date": "Production Date",
