--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -1067,6 +1067,14 @@
     "columns": {
       "receipt_id": "Mã đơn",
       "receiptType": "Loại đơn hàng",
+      "productCode":"Mã thành phẩm",
+      "productionPlan": "Mã kế hoạch",
+      "expirationDate": "Hạn sử dụng",
+      "curentStatus": "Tình trạng",
+      "materialType": "Loại nguyên liệu",
+      "productImage": "Hình ảnh lô nguyên liệu",
+      "planCode": "Mã kế hoạch",
+      "weight": "Cân nặng",
       "storage": "Kho",
       "status": "Trạng thái",
       "createdAt": "Ngày tạo",
