--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -105,6 +105,15 @@
   "emailNotExist": "Email does not exist.",
   "otp_expired_or_not_exist": "OTP has expired or does not exist.",
   "otp_incorrect": "OTP is incorrect or has expired.",
+  "reset_password": "Reset Password",
+  "new_password": "New Password",
+  "confirm_password": "Confirm Password",
+  "enter_new_password": "Enter new password",
+  "reenter_password": "Re-enter password",
+  "error_min_length": "Password must be at least 6 characters.",
+  "error_not_match": "Passwords do not match.",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
   "carousel": {
     "view_more": "View more",
     "slide1_title": "Welcome to Mangovate",
@@ -1032,54 +1041,54 @@
       "confirm_cancel": "OK"
     }
   },
-"dashboardWarehouse": {
-  "title": "Warehouse Management",
-  "totalReceipts": "Total receipts",
-  "pendingReceipts": "Pending receipts",
-  "approvedReceipts": "Approved receipts",
-  "importedReceipts": "Imported receipts",
-  "totalExports": "Total export orders",
-  "pendingExports": "Pending export orders",
-  "completedExports": "Completed export orders",
-  "orderStatus": "Order status",
-  "exported": "Exported",
-  "storageInfo": "Storage Information",
-  "used": "used",
-  "statsChartTitle": "Import orders statistics",
-  "exportStatsChartTitle": "Export orders statistics",
-  "exportOrders": "Export orders",
-  "exportLoadError": "Failed to load export orders",
-  "filter": {
-    "day": "By Day",
-    "week": "By Week",
-    "month": "By Month"
+  "dashboardWarehouse": {
+    "title": "Warehouse Management",
+    "totalReceipts": "Total receipts",
+    "pendingReceipts": "Pending receipts",
+    "approvedReceipts": "Approved receipts",
+    "importedReceipts": "Imported receipts",
+    "totalExports": "Total export orders",
+    "pendingExports": "Pending export orders",
+    "completedExports": "Completed export orders",
+    "orderStatus": "Order status",
+    "exported": "Exported",
+    "storageInfo": "Storage Information",
+    "used": "used",
+    "statsChartTitle": "Import orders statistics",
+    "exportStatsChartTitle": "Export orders statistics",
+    "exportOrders": "Export orders",
+    "exportLoadError": "Failed to load export orders",
+    "filter": {
+      "day": "By Day",
+      "week": "By Week",
+      "month": "By Month"
+    },
+    "recentReceipts": "Recent receipts",
+    "columns": {
+      "id": "Receipt ID",
+      "manager": "Manager",
+      "status": "Status",
+      "quantity": "Quantity",
+      "createdAt": "Created At",
+      "creator": "Creator",
+      "batchName": "Raw material batch"
+    },
+    "noData": "No data available",
+    "notLoggedIn": "You are not logged in!",
+    "noStorageInfo": "Storage info not found!",
+    "noReceipts": "No receipt data found!",
+    "serverError": "Failed to connect to the server!",
+    "status": {
+      "pending": "Pending",
+      "approve": "Approved",
+      "cancelled": "Cancelled",
+      "completed": "Completed",
+      "processing": "Processing",
+      "failed": "Failed",
+      "disable": "Disabled",
+      "imported": "Imported"
+    }
   },
-  "recentReceipts": "Recent receipts",
-  "columns": {
-    "id": "Receipt ID",
-    "manager": "Manager",
-    "status": "Status",
-    "quantity": "Quantity",
-    "createdAt": "Created At",
-    "creator": "Creator",
-    "batchName": "Raw material batch"
-  },
-  "noData": "No data available",
-  "notLoggedIn": "You are not logged in!",
-  "noStorageInfo": "Storage info not found!",
-  "noReceipts": "No receipt data found!",
-  "serverError": "Failed to connect to the server!",
-  "status": {
-    "pending": "Pending",
-    "approve": "Approved",
-    "cancelled": "Cancelled",
-    "completed": "Completed",
-    "processing": "Processing",
-    "failed": "Failed",
-    "disable": "Disabled",
-    "imported": "Imported"
-  }
-},
   "fuelOrderStatus": {
     "fetchError": "Failed to fetch order list!",
     "serverError": "Unable to connect to the server!",
@@ -1134,7 +1143,7 @@
       "receipt_id": "Receipt ID",
       "manager": "Manager",
       "receiptType": "Receipt Type",
-      "productCode":"Product Code",
+      "productCode": "Product Code",
       "productionPlan": "Production Plan",
       "materialType": "Material Category",
       "weight": "Weight",
