--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -102,6 +102,15 @@
   "emailNotExist": "Email không tồn tại",
   "otp_expired_or_not_exist": "OTP đã hết hạn hoặc không tồn tại.",
   "otp_incorrect": "OTP không chính xác, hoặc đã hết hạn.",
+  "reset_password": "Đặt lại mật khẩu",
+  "new_password": "Mật khẩu mới",
+  "confirm_password": "Xác nhận mật khẩu",
+  "enter_new_password": "Nhập mật khẩu mới",
+  "reenter_password": "Nhập lại mật khẩu",
+  "error_min_length": "Mật khẩu phải có ít nhất 6 ký tự.",
+  "error_not_match": "Mật khẩu nhập lại không khớp.",
+  "cancel": "Hủy",
+  "confirm": "Xác nhận",
   "carousel": {
     "view_more": "Xem thêm",
     "slide1_title": "Chào mừng đến với Mangovate",
@@ -817,13 +826,13 @@
     "success": {
       "created": "Tạo kế hoạch nhập nguyên liệu thành công!",
       "updated": "Cập nhật kế hoạch nhập nguyên liệu thành công!",
-      "accept":  "Duyệt kế hoạch nhập nguyên liệu thành công!",
+      "accept": "Duyệt kế hoạch nhập nguyên liệu thành công!",
       "delete": "Xóa kế hoạch nhập nguyên liệu thành công!"
     },
     "fail": {
       "created": "Tạo kế hoạch nhập nguyên liệu thất bại!",
       "updated": "Cập nhật kế hoạch nhập nguyên liệu thất bại!",
-      "accept":  "Duyệt kế hoạch nhập nguyên liệu thất bại!",
+      "accept": "Duyệt kế hoạch nhập nguyên liệu thất bại!",
       "delete": "Xóa kế hoạch nhập nguyên liệu thất bại!"
     }
   },
@@ -1021,53 +1030,53 @@
     }
   },
   "dashboardWarehouse": {
-  "title": "Quản Lý Kho",
-  "totalReceipts": "Tổng đơn nhập kho",
-  "pendingReceipts": "Đơn Chờ Duyệt",
-  "approvedReceipts": "Đơn Đã Duyệt",
-  "importedReceipts": "Đơn đã nhập kho",
-  "totalExports": "Tổng đơn xuất kho",
-  "pendingExports": "Đơn xuất kho chờ duyệt",
-  "completedExports": "Đơn xuất kho hoàn thành",
-  "orderStatus": "Trạng thái đơn",
-  "exported": "Đã xuất kho",
-  "storageInfo": "Thông tin kho",
-  "used": "đã sử dụng",
-  "statsChartTitle": "Thống kê đơn nhập kho",
-  "exportStatsChartTitle": "Thống kê đơn xuất kho",
-  "exportOrders": "Đơn xuất kho",
-  "exportLoadError": "Không thể tải dữ liệu đơn xuất kho",
-  "filter": {
-    "day": "Theo Ngày",
-    "week": "Theo Tuần",
-    "month": "Theo Tháng"
+    "title": "Quản Lý Kho",
+    "totalReceipts": "Tổng đơn nhập kho",
+    "pendingReceipts": "Đơn Chờ Duyệt",
+    "approvedReceipts": "Đơn Đã Duyệt",
+    "importedReceipts": "Đơn đã nhập kho",
+    "totalExports": "Tổng đơn xuất kho",
+    "pendingExports": "Đơn xuất kho chờ duyệt",
+    "completedExports": "Đơn xuất kho hoàn thành",
+    "orderStatus": "Trạng thái đơn",
+    "exported": "Đã xuất kho",
+    "storageInfo": "Thông tin kho",
+    "used": "đã sử dụng",
+    "statsChartTitle": "Thống kê đơn nhập kho",
+    "exportStatsChartTitle": "Thống kê đơn xuất kho",
+    "exportOrders": "Đơn xuất kho",
+    "exportLoadError": "Không thể tải dữ liệu đơn xuất kho",
+    "filter": {
+      "day": "Theo Ngày",
+      "week": "Theo Tuần",
+      "month": "Theo Tháng"
+    },
+    "recentReceipts": "Đơn nhập kho",
+    "columns": {
+      "id": "Mã đơn",
+      "manager": "Người quản lý",
+      "status": "Trạng thái",
+      "quantity": "Số lượng",
+      "createdAt": "Ngày nhập",
+      "creator": "Người tạo",
+      "batchName": "Lô nguyên liệu"
+    },
+    "noData": "Không có dữ liệu",
+    "notLoggedIn": "Bạn chưa đăng nhập!",
+    "noStorageInfo": "Không tìm thấy thông tin kho!",
+    "noReceipts": "Không có dữ liệu đơn nhập kho!",
+    "serverError": "Không thể kết nối đến server!",
+    "status": {
+      "pending": "Chờ duyệt",
+      "approve": "Đã duyệt",
+      "cancelled": "Đã hủy",
+      "completed": "Hoàn thành",
+      "processing": "Đang xử lý",
+      "failed": "Thất bại",
+      "disable": "Vô hiệu hóa",
+      "imported": "Nhập kho thành công"
+    }
   },
-  "recentReceipts": "Đơn nhập kho",
-  "columns": {
-    "id": "Mã đơn",
-    "manager": "Người quản lý",
-    "status": "Trạng thái",
-    "quantity": "Số lượng",
-    "createdAt": "Ngày nhập",
-    "creator": "Người tạo",
-    "batchName": "Lô nguyên liệu"
-  },
-  "noData": "Không có dữ liệu",
-  "notLoggedIn": "Bạn chưa đăng nhập!",
-  "noStorageInfo": "Không tìm thấy thông tin kho!",
-  "noReceipts": "Không có dữ liệu đơn nhập kho!",
-  "serverError": "Không thể kết nối đến server!",
-  "status": {
-    "pending": "Chờ duyệt",
-    "approve": "Đã duyệt",
-    "cancelled": "Đã hủy",
-    "completed": "Hoàn thành",
-    "processing": "Đang xử lý",
-    "failed": "Thất bại",
-    "disable": "Vô hiệu hóa",
-    "imported": "Nhập kho thành công"
-  }
-},
   "fuelOrderStatus": {
     "fetchError": "Lỗi khi lấy danh sách đơn hàng!",
     "serverError": "Không thể kết nối đến server!",
@@ -1131,7 +1140,7 @@
     "columns": {
       "receipt_id": "Mã đơn",
       "receiptType": "Loại đơn hàng",
-      "productCode":"Mã thành phẩm",
+      "productCode": "Mã thành phẩm",
       "productionPlan": "Mã kế hoạch",
       "expirationDate": "Hạn sử dụng",
       "curentStatus": "Tình trạng",
